# Python-Asimov-Academy

./: .gitignore  README.md  Trilha - Inteligencia Artificial Projeto - Analisador de Curriculos com IA db.json  requirements.txt
Conceitos Basicos de Python/01 - Fundamentos de Python/: 02_numeros.py  06_desafio_entrevista.py
Conceitos Basicos de Python/02 - Controle de Fluxo/: 03_operadores_booleanos.py  04_desafio_usuario_e_senha.py
Conceitos Basicos de Python/03 - Sequencias e Loops/: 06_for_loops.py  08_while_loops.py
Conceitos Basicos de Python/05 - Funcoes e Importacao/: 02_parametros_argumentos.py  03_valor_none.py  04_importacao_de_modulos.py  05_biblioteca_padrao.py
Conceitos Basicos de Python/06 - Desafios finais/: 01_desafio_cifra_de_cesar.py  02_desafio_baralho_cartas.py
Modulo 01 - Conceitos Basicos/01 - Fundamentos de Python/: 03_textos.py  04_variaveis.py
Modulo 01 - Conceitos Basicos/02 - Controle de Fluxo/: 02_operadores_de_comparacao.py  05_desafio_acertar_numero.py
Modulo 01 - Conceitos Basicos/03 - Sequencias e Loops/: 01_listas.py  02_tuplas_dados_mutaveis.py  04_slicing.py  07_iterando_sequencias.py  10_desafio_iteracao.py  11_desafio_iteracao_multiplas_listas.py
Modulo 01 - Conceitos Basicos/04 - Dicionarios e Metodos/: 02_operador_in.py  04_desafio_contador_caracteres.py  05_desafio_jogo_estados.py
Modulo 01 - Conceitos Basicos/05 - Funcoes e Importacao/: 01_funcoes.py  02_parametros_argumentos.py
Projeto - Software de Gestao para Locadora de Carros/: locadora.py
Trilha - Inteligencia Artificial/: 01_inicializando_biblioteca.ipynb  02_chatbot.py  db.json  requirements.txt
Trilha - Inteligencia Artificial/.ipynb_checkpoints/: 01_inicializando_biblioteca-checkpoint.ipynb
Trilha - Inteligencia Artificial/02 - Criando Aplicativos Web com Streamlit/: spotify.py
Trilha - Inteligencia Artificial/03 - Funções Externas com LangChain/: 03_funcoes_externas_langchain.py
Trilha - Inteligencia Artificial/04 - Aplicacoes de IA com LangChain/: 01_models_acessando_modelos.ipynb
Trilha - Inteligencia Artificial/05 - Fine Tuning/: fine_tuning.py
Trilha - Inteligencia Artificial/05 - Projeto ChatPDF com LangChain/: configs.py  home.py  utils.py  🏠_Home.py
Trilha - Inteligencia Artificial/Projeto - Analisador de Curriculos com IA/: README.md  ai.py  analise.py  app.py  create_job.py  database.py  db.json  download_cv.py  helper.py  pyproject.toml  requirements.txt
Trilha - Inteligencia Artificial/Projeto - Analisador de Curriculos com IA/models/: analysis.py  job.py
Trilha - Inteligencia Artificial/Projeto - Bot Nutricionista Telegram/: README.md  pyproject.toml  requirements.txt
Trilha - Inteligencia Artificial/Projeto - Bot Nutricionista Telegram/nutritionist/agents/: nutritionist.py
Trilha - Inteligencia Artificial/Projeto - Bot Nutricionista Telegram/nutritionist/chat/: memory.py  telegram.py
Trilha - Inteligencia Artificial/Projeto - Bot Nutricionista Telegram/nutritionist/database/: engine.py
Trilha - Inteligencia Artificial/Projeto - Bot Nutricionista Telegram/nutritionist/models/: __init__.py  diet_plan.py  meal_entry.py  report.py  user.py  weight_history.py
Trilha - Inteligencia Artificial/Projeto - Bot Nutricionista Telegram/nutritionist/repositories/: __init__.py  base_repository.py  diet_plan.py  meal_entry.py  report.py  user.py  weight_history.py
Trilha - Inteligencia Artificial/Projeto - Bot Nutricionista Telegram/nutritionist/tools/: __init__.py  diet_plan_tool.py  food_analyzer_tool.py  meal_entry_tool.py  report_tool.py  user_info_tool.py  user_registration_tool.py  weight_update_tool.py
(+72 files in other folders)
