[project]
name = "analisador-de-curriculos-com-ia"
version = "0.1.0"
description = "Este projeto utiliza a API do Google Drive para ler currículos, juntamente do LangChain + API do Groq para resumir e pontuar currículos, com base na descrição da vaga."
authors = [
    {name = "Anna Chandra"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-api-python-client (>=2.157.0,<3.0.0)",
    "google-auth-httplib2 (>=0.2.0,<0.3.0)",
    "google-auth-oauthlib (>=1.2.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
